# nixos

./: .gitignore  .sops.yaml  README.md  configuration.nix  flake.nix
app-repo/: flake.nix
app-repo/5dchess/: flake.nix  result
assets/: header-template.txt  header.txt
assets/builder/: achievement_helper.py
assets/xmobar/: LICENSE  default.nix  xmobar.cabal  xmobar.hs
assets/xmonad/: CHANGELOG.md  LICENSE  default.nix  flake.nix  shell.nix  xmonad-conf.cabal  xmonad.cabal  xmonad.hs
assets/xmonad/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
assets/xmonad/lib/: Definitions.hs  EventHandling.hs  Layout.hs  StartupHook.hs  Vimization.hs  XMobar.hs
assets/xmonad/lib/Foreign/: ScreenCast.hs
assets/xmonad/src/: Main.hs
assets/xmonad/src/xmobar/: xmobar.hs
fokopc/home-manager/: home.nix
fokopc/nixos/: configuration.nix
fokopc/nixos/submodules/: sddm.nix
fokopi/: .sops.yaml  flake.nix
fokopi/home-manager/: home.nix
fokopi/nixos/: configuration.nix
fokopi/secrets/: secrets.yaml
fokoserver/submodules/: hardware-configuration.nix  minecraft.nix  secrets.nix
home-manager/: home.nix
home-manager/ags/: config.js
hosts/fokolaptop/: default.nix  hardware-configuration.nix
hosts/fokopc/: default.nix  hardware-configuration.nix
hosts/fokophone/: default.nix
hosts/fokopi/: default.nix
hosts/fokopine/: configuration.nix  hardware-configuration.nix
nixos/: configuration.nix
nixos/submodules/: theme.nix
secrets/: secrets.yaml
server/: configuration.nix
server/submodules/: networking.nix  theme.nix
submodules/: discord.nix  keymanagement.nix  lambdagreet.nix  matrix.nix  monster.nix  nathan-overrides.nix  networking.nix  nginx.nix  nvf-configuration.nix  proxychains.nix  rainworld.nix  sddm.nix  secrets.nix  sessions.nix  theme.nix  xmonad.nix
user/foko/: home-mini.nix  home.nix
user/foko/ags/: README.md  config.js  notificationPopups.js  style.css
user/foko/dotfiles/: neofetch.conf  udiskie.yml
user/foko/dotfiles/lwp/: log
user/foko/dotfiles/lwp/monitors/: HDMI-A-1.cfg
user/foko/dotfiles/lwp/wallpapers/rainworld-ascension/: composition.kra  wallpaper.cfg
user/foko/dotfiles/quickshell/notif/: NotificationItem.qml  shell.qml
user/foko/dotfiles/quickshell/panel/: FComponent.qml  Panel.qml  shell.qml
