cabal-version:      3.0
name:               custom-xmobar
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             FokoHetman
maintainer:         foko@hetman.com
category:           Graphics
build-type:         Simple


-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall


executable custom-xmobar
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          xmobar.hs
    ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded -haddock

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends: base
                  , xmobar
                  , network
                  , time
    -- Directories containing source files.
    hs-source-dirs: .

    -- Base language which the package is written in.
    default-language: Haskell2010
