cabal-version:      3.0
name:               xmonadrc
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             FokoHetman
maintainer:         paprykkania@gmail.com
category:           Graphics
build-type:         Simple


-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall


library
  exposed-modules:
    Definitions
    EventHandling
--    XMobar
--    KeyBindings
--    TrueFullscreen
--    Layout
--    LogHook
--    MouseBindings
--    StartupHook
--    ManageHook
--    WindowState
  hs-source-dirs: lib
  ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded -haddock
  build-depends: base
    , xmonad
    , xmonad-contrib
    , containers
    , X11
    , flow
  default-language: Haskell2010


executable xmonad
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          xmonad.hs
    ghc-options: -Wall -rtsopts -with-rtsopts=-V0 -threaded -haddock

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends: base
                  , xmobar
                  , xmonad
                  , xmonad-contrib
                  , xmonadrc
                  , containers
                  , flow
    -- Directories containing source files.
    hs-source-dirs: .

    -- Base language which the package is written in.
    default-language: Haskell2010
